[project]
name = "langgraph-tool-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonpatch>=1.33",
    "langchain[anthropic]>=0.3.27",
    "langgraph>=0.6.7",
    "langsmith>=0.4.31",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
